# stocks-mcp-server

./: .gitignore  LICENSE  README.md  fundamentals.py  pyproject.toml  server.py
examples/: EDGAR_crawling1.ipynb  FnGuide_crawling.ipynb  NaverFinance_crawling.ipynb  OpenDart_crawling.ipynb  OpenDart_crawling_refactored.ipynb  [삼성전자]장래사업ㆍ경영계획(공정공시)(2025.10.30).html  dart_toc.json  dataset_Harry Potter and the Goblet of Fire.jsonl  dataset_Harry Potter and the Sorcerors Stone.jsonl  epub_crawling.ipynb  epub_data_collector_refactored.ipynb
examples/20190401004781_ifrs/: 00126380_2011-04-30.xbrl  00126380_entry_point_2011-04-30.xsd  ifrs_for_00126380\dimensions_ifrs_for_00126380\cal_ifrs_for_00126380_2011-04-30.xml  ifrs_for_00126380\dimensions_ifrs_for_00126380\dim_ifrs_for_00126380_2011-04-30.xml  ifrs_for_00126380\dimensions_ifrs_for_00126380\pre_ifrs_for_00126380_2011-04-30.xml  ifrs_for_00126380\dimensions_ifrs_for_00126380\role_ifrs_for_00126380-dim_2011-04-30.xsd  labels\lab_00126380-en_2011-04-30.xml  labels\lab_00126380-ko_2011-04-30.xml
examples/20251204000046/: 20251204000046.xml
examples/data/: en_Harry Potter and the Goblet of Fire.epub  en_Harry Potter and the Sorcerors Stone.epub  kr_Harry Potter and the Goblet of Fire.epub
examples/edgar/: README.md  analyze_edgar.py  analyze_edgar_gemini_&_claude.ipynb  analyze_edgar_with_claude.py  company_tickers.json  config.json  download_filings.py  extract_items.py  (+6 more)
utils/: companydict.py  gcpmanager.py  gemini.py  naverfinance.py  opendart.py  opendart_refactored_claude.py  prompt.py  yahoofinance.py
(+123 files in other folders)
